# ref_drf

./: .env.docker  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  ref_drf.postman_collection.json  requirements.txt
config/: celery.py  settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_user_verification_code_alter_user_own_invite_key.py  0003_alter_user_is_active.py  0004_alter_user_alien_invite_key_and_more.py  0005_rename_alien_invite_key_user_related_user_and_more.py  0006_alter_user_invite_key.py
users/tests/: tests.py
